# hmm-adaptive-var

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
dev_context/: AGENTS.md  CLEAN_CODE_MCP.md  QUANT_FRAMEWORK_MCP.md
legacy_backup/: analyze_log.py  config.py  data_fetcher.py  main.py  markov_model.py  var_model.py
src/hmm_var/: __init__.py  analytics.py  data_fetcher.py  data_lake.py  main.py  markov_model.py  settings.py  var_model.py  visualizer.py
tests/: test_var.py
